k8s/prod/fighter-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fighter-manager
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fighter-manager
  template:
    metadata:
      labels:
        app: fighter-manager
    spec:
      containers:
      - name: fighter-manager
        image: us-central1-docker.pkg.dev/codejitsu/codejitsu-repo/fighter-manager:$SHORT_SHA
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: fighter-manager
  namespace: prod
spec:
  selector:
    app: fighter-manager
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
