k8s/prod/match-maker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match-maker
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: match-maker
  template:
    metadata:
      labels:
        app: match-maker
    spec:
      containers:
      - name: match-maker
        image: us-central1-docker.pkg.dev/codejitsu/codejitsu-repo/match-maker:$SHORT_SHA
        ports:
        - containerPort: 8082
        resources:
          requests:
            cpu: "50m"
            memory: "32Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: match-maker
  namespace: prod
spec:
  selector:
    app: match-maker
  ports:
  - port: 8082
    targetPort: 8082
  type: NodePort
