k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codejitsu-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: " GCE"
spec:
  rules:
  - host: codejitsu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api/fighter
        pathType: Prefix
        backend:
          service:
            name: fighter-manager
            port:
              number: 8080
      - path: /api/video
        pathType: Prefix
        backend:
          service:
            name: video-sharing
            port:
              number: 8081
      - path: /api/pair
        pathType: Prefix
        backend:
          service:
            name: match-maker
            port:
              number: 8082
